--- a/login.html
+++ b/login.html
@@ -10,9 +10,25 @@
   <main class="login-shell">
     <section class="login-card" aria-labelledby="login-title">
       <h1 id="login-title">Kanban</h1>
-      <p>Bitte mit Google anmelden, um dein Board zu oeffnen.</p>
-      <a class="google-login-btn" href="/auth/google">Mit Google anmelden</a>
+      <p id="login-subtitle">Bitte mit Google anmelden, um dein Board zu oeffnen.</p>
+      <a id="login-google-btn" class="google-login-btn" href="/auth/google">Mit Google anmelden</a>
     </section>
   </main>
+  <script>
+    (function () {
+      const locale = localStorage.getItem("kanban-locale") === "en" ? "en" : "de";
+      const subtitle = document.getElementById("login-subtitle");
+      const googleBtn = document.getElementById("login-google-btn");
+      if (locale === "en") {
+        if (subtitle) subtitle.textContent = "Please sign in with Google to open your board.";
+        if (googleBtn) googleBtn.textContent = "Sign in with Google";
+        document.documentElement.lang = "en";
+      } else {
+        if (subtitle) subtitle.textContent = "Bitte mit Google anmelden, um dein Board zu öffnen.";
+        if (googleBtn) googleBtn.textContent = "Mit Google anmelden";
+        document.documentElement.lang = "de";
+      }
+    })();
+  </script>
 </body>
 </html>
